--- a/rob-app/package.json
+++ b/rob-app/package.json
@@ -17,6 +17,8 @@
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/icon": "^1.12.0",
     "@nuxt/ui": "^3.0.2",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/nuxt": "^13.1.0",
     "axios": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2"
