--- a/rob-app/package.json
+++ b/rob-app/package.json
@@ -17,11 +17,15 @@
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/icon": "^1.12.0",
     "@nuxt/ui": "^3.0.2",
+    "@pinia/colada": "^0.15.2",
+    "@pinia/colada-nuxt": "^0.1.3",
+    "@pinia/nuxt": "^0.11.0",
     "@vueuse/core": "^13.1.0",
     "@vueuse/nuxt": "^13.1.0",
     "axios": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
-    "nuxt": "^3.16.2"
+    "nuxt": "^3.16.2",
+    "pinia": "^3.0.2"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.3.0",
