--- a/rob-app/package.json
+++ b/rob-app/package.json
@@ -23,6 +23,7 @@
     "@vueuse/core": "^13.1.0",
     "@vueuse/nuxt": "^13.1.0",
     "axios": "^1.9.0",
+    "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2",
     "pinia": "^3.0.2"
