--- a/package.json
+++ b/package.json
@@ -1,5 +1,36 @@
 {
+  "name": "nuxt-app",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
+  },
   "dependencies": {
-    "axios": "^1.9.0"
+    "@iconify-json/lucide": "^1.2.38",
+    "@iconify-json/simple-icons": "^1.2.33",
+    "@nuxt/fonts": "^0.11.2",
+    "@nuxt/icon": "^1.12.0",
+    "@nuxt/ui": "^3.0.2",
+    "@pinia/colada": "^0.15.2",
+    "@pinia/colada-nuxt": "^0.1.3",
+    "@pinia/nuxt": "^0.11.0",
+    "@vueuse/core": "^13.1.0",
+    "@vueuse/nuxt": "^13.1.0",
+    "axios": "^1.9.0",
+    "jose": "^6.0.11",
+    "jsonwebtoken": "^9.0.2",
+    "nuxt": "^3.16.2",
+    "pinia": "^3.0.2"
+  },
+  "devDependencies": {
+    "@nuxt/eslint": "^1.3.0",
+    "eslint": "^9.25.1",
+    "typescript": "^5.8.3"
   }
 }
