--- a/package.json
+++ b/package.json
@@ -12,29 +12,26 @@
     "lint:fix": "eslint --fix ."
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.38",
-    "@iconify-json/simple-icons": "^1.2.33",
     "@nuxt/fonts": "^0.11.2",
     "@nuxt/icon": "^1.12.0",
     "@nuxt/ui": "^3.0.2",
     "@nuxthub/core": "^0.8.27",
+    "@nuxtjs/seo": "^3.0.3",
     "@pinia/colada": "^0.15.2",
     "@pinia/colada-nuxt": "^0.1.3",
     "@pinia/nuxt": "^0.11.0",
     "@vueuse/core": "^13.1.0",
     "@vueuse/nuxt": "^13.1.0",
-    "aws-amplify": "^6.14.4",
     "axios": "^1.9.0",
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.16.2",
+    "nuxt-gtag": "^3.0.2",
     "pinia": "^3.0.2"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.16.1",
-    "@aws-amplify/backend-cli": "^1.7.2",
+    "@iconify-json/material-symbols": "^1.2.23",
     "@nuxt/eslint": "^1.3.0",
-    "aws-cdk-lib": "^2.189.1",
     "constructs": "^10.4.2",
     "esbuild": "^0.25.4",
     "eslint": "^9.25.1",
